syntax = "proto3";

package proto;

option go_package = "www.velocidex.com/golang/velociraptor/api/proto";

message OrgRecord {
    string name = 1;
    string nonce = 2;
    string org_id = 3;
}