syntax = "proto3";


package proto;

option go_package = "www.velocidex.com/golang/velociraptor/services/frontend/proto";


// Not a replacement for proper monitoring - just a simple load
// monitor for the dashboard. For proper monitoring use
// graphana/prometheus.
message Metrics {
    int64 process_cpu_nano_seconds_total = 1;

    // Percent of one core used by this frontend process.
    int64 cpu_load_percent = 4;
    int64 client_comms_current_connections = 2;
    int64 process_resident_memory_bytes = 3;
}


// Describe the frontend state.
message FrontendState {
    // The unique name of the frontend.
    string name = 1;

    string version = 5;

    // Updated periodically to indicate the frontend is alive (in
    // nanoseconds).
    int64 heartbeat = 2;

    // The URL over which the frontend is accessible to clients.
    string url = 3;

    Metrics metrics = 4;

    // If set other frontends will not redirect to this frontend
    // automatically. This makes sense if you have an external load
    // balancer that will redirect traffic to this node.
    bool do_not_redirect = 6;
}